검색영역 마크업 추가

--- a/index.html
+++ b/index.html
@@ -108,9 +108,27 @@
                     </ul>
                 </div>
             </div>
-            <div class="group group2">콘텐츠컬럼2</div>
+
+            <div class="group group2">콘텐츠컬럼2
+              <main class="search">
+                <img class="list_image"></img>
+                    <h2 class="list1_heading">자료검색</h2>
+                    <form action="javascript:alert('회원님 반갑습니다.');" class="login-form">
+                        <fieldset>
+                            <legend>회원 로그인 아래 리뷰 폼</legend>
+                            <div class="search_what">
+                                <label for="search_detail">자료검색</label>
+                                <input type="search" id="search_detail" required placeholder="검색어를 입력하세요.">
+                            </div>
+                            <button type="submit" class="search-start">로그인</button>
+                        </fieldset>
+                    </form>
+                </div>
+              </main>
+            </div>
             <div class="group group3">콘텐츠컬럼3</div>
         </main>
+
         <article class="slogan">슬로건</article>
         <div class="footer-bg">
             <footer class="footer">푸터</footer>
